# yoshitsugu.github.io

./: .gitignore  .gitmodules  .travis.yml  CNAME  LICENSE  about.html  about.md  archive.html  atom.xml  index.html  package.yaml  rss  site.hs  sitemap.xml  stack.yaml  yoshitsugu-github-io.cabal
.travis/: github_deploy_key.enc
css/: blog.css  blog.scss  highlight-pygments.css  highlight-tango-for-dark-mode.css  highlight.css  pure-min.css
docs/: archive.html  index.html
js/: ga.js
posts/: 2016-03-04-greeting.md  2016-03-05-greeting.html  2016-03-05-greeting.md  2016-03-07-ldap-from-ruby.html  2016-03-07-ldap-from-ruby.md  2016-03-11-code-review-and-communication.html  2016-03-11-code-review-and-communication.md  2016-03-15-state-monad.html  2016-03-15-state-monad.md  2016-03-27-servant-hrr-elm-spa.html  2016-03-27-servant-hrr-elm-spa.md  2016-04-08-how-to-work-effectively.html  2016-04-08-how-to-work-effectively.md  2016-06-25-work-remotely.html  2016-06-25-work-remotely.md  2016-08-21-joel-on-hiring.html  2016-08-21-joel-on-hiring.md  2016-11-01-google-ime-skkserv-in-rust.html  2016-11-01-google-ime-skkserv-in-rust.md  2016-12-17-work-remotely-updates.html  2016-12-17-work-remotely-updates.md  2017-01-24-books-read-recently.html  2017-01-24-books-read-recently.md  2017-02-10-slack-slash-pomo.html  2017-02-10-slack-slash-pomo.md  2017-02-24-productivity.html  2017-02-24-productivity.md  2017-04-05-daemonize-gskkserv.html  2017-04-05-daemonize-gskkserv.md  2017-05-10-move-to-iwate.html  2017-05-10-move-to-iwate.md  2017-06-13-perfect-ruby.html  (+126 more)
tags/: DX.html  (+61 more)
(+65 files in other folders)
