name:                yoshitsugu-github-io
version:             0.1.0.1
synopsis:            Hakyll project template from stack
description:         Please see README.md
homepage:            http://github.com/yoshitsugu/yoshitsugu-github-io
license:             MIT
license-file:        LICENSE
author:              Kota Yoshitsugu
maintainer:          zeroinon1206bass@gmail.com
copyright:           2016, Kota Yoshitsugu
category:            Blog
build-type:          Simple
cabal-version:       >=1.10

executable blog
  main-is:             site.hs
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded
  build-depends:       base == 4.*
                     , hakyll == 4.*
                     , highlighting-kate

source-repository head
  type:     git
  location: git://github.com/yoshitsugu/yoshitsugu.github.io.git